--- a/freva/10-mysql.yaml
+++ b/freva/10-mysql.yaml
@@ -78,6 +78,8 @@ spec:
             - { name: PROJECT, value: "freva" }
           volumeMounts:
             - { name: db-data, mountPath: /data/db }
+          readinessProbe: { tcpSocket: { port: 3306 }, initialDelaySeconds: 5, periodSeconds: 5 }
+          livenessProbe:  { tcpSocket: { port: 3306 }, initialDelaySeconds: 10, periodSeconds: 10 }
       volumes:
         - name: db-data
           persistentVolumeClaim: { claimName: db-data }
