--- a/freva/12-solr.yaml
+++ b/freva/12-solr.yaml
@@ -38,6 +38,11 @@ metadata:
 spec:
   serviceName: search-server
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
   selector: { matchLabels: { app: search-server } }
   template:
     metadata:
