--- a/freva/32-web-app.yaml
+++ b/freva/32-web-app.yaml
@@ -67,6 +67,11 @@ metadata:
     freva.org/tier: frontend
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
   selector:
     matchLabels:
       app: web-app
@@ -96,18 +101,24 @@ spec:
           resources:
             limits:
               cpu: "50m"
-              cpu: "50m"
               memory: "256Mi"
       containers:
         - name: nginx
           image: ghcr.io/freva-org/freva-nginx:1.29.3
           imagePullPolicy: IfNotPresent
-          resources: {'limits': {'cpu': '1600m', 'memory': '2Gi'}, 'requests': {'cpu': '600m', 'memory': '1Gi'}}
+          resources:
+            requests:
+              cpu: "200m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
+
           env:
             - {name: SERVER_ROOT, value: "/srv/static"}
             - {name: VAULT_HOST, value: "vault-server:5002"}
             - {name: FREVA_REST_HOST, value: "freva-rest-server:7777"}
-            - {name: EVALUATION_SYSTEM_CONFIG_FILE, value: "/gpfs/csfs1/work/gdexdata/freva/evaluation_system.conf"}
+            - {name: EVALUATION_SYSTEM_CONFIG_FILE, value: "/gpfs/csfs1/work/gdexdata/freva/freva/evaluation_system.conf"}
             - {name: CHATBOT_HOST, value: "localhost"}
             - {name: WEB_SERVER_NAME, value: "127.0.0.1"}
             - {name: WEB_SERVER_PORT, value: "8000"}
@@ -127,10 +138,10 @@ spec:
         - name: web-app
           image: ghcr.io/freva-org/freva-web:2510.3.4
           imagePullPolicy: IfNotPresent
-          resources: {'limits': {'cpu': '1600m', 'memory': '2Gi'}, 'requests': {'cpu': '600m', 'memory': '1Gi'}}
+          resources: {'limits': {'cpu': '1000m', 'memory': '2Gi'}, 'requests': {'cpu': '600m', 'memory': '1Gi'}}
           env:
             - name: EVALUATION_SYSTEM_CONFIG_FILE
-              value: "/gpfs/csfs1/work/gdexdata/freva/evaluation_system.conf"
+              value: "/gpfs/csfs1/work/gdexdata/freva/freva/evaluation_system.conf"
             - name: DJANGO_SUPERUSER_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -139,7 +150,7 @@ spec:
             - name: ALLOWED_HOSTS
               value: "freva-httpd,freva.k8s.ucar.edu,localhost,www.freva.k8s.ucar.edu"
             - name: FREVA_WEB_CONFIG_FILE
-              value: "/gpfs/csfs1/work/gdexdata/freva/web/freva_web_conf.toml"
+              value: "/gpfs/csfs1/work/gdexdata/freva/freva/web/freva_web_conf.toml"
             - name: SCHEDULER_HOST
               value: "caspar.hpc.ucar.edu"
             - name: CSRF_TRUSTED_ORIGINS
