--- a/freva/13-vault.yaml
+++ b/freva/13-vault.yaml
@@ -37,6 +37,11 @@ metadata:
 spec:
   serviceName: vault-server
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
   selector: { matchLabels: { app: vault-server } }
   template:
     metadata:
