--- a/freva/22-data-loader.yaml
+++ b/freva/22-data-loader.yaml
@@ -38,7 +38,7 @@ spec:
         - name: data-loader
           image: ghcr.io/freva-org/freva-data-loader:2510.1.2
           imagePullPolicy: IfNotPresent
-          resources: {'limits': {'cpu': '2', 'memory': '4Gi'}, 'requests': {'cpu': '500m', 'memory': '1Gi'}}
+          resources: {'limits': {'cpu': '1200m', 'memory': '3Gi'}, 'requests': {'cpu': '500m', 'memory': '1Gi'}}
           env:
             - name: API_CONFIG
               value: /tmp/data-loader.conf
